--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "country-data": "0.0.25",
     "koa": "^1.2.0",
+    "koa-cors": "0.0.16",
     "koa-router": "^5.4.0",
     "lodash": "^4.13.1",
     "mongodb": "^2.1.8"
